# flutter_litert

./: CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/kotlin/com/hugocornellier/flutter_litert/: FlutterLitertPlugin.kt
android/src/test/kotlin/com/hugocornellier/flutter_litert/: FlutterLitertPluginTest.kt
example/: example.dart
ios/: flutter_litert.podspec
ios/Classes/: TfliteCustomOpsLoader.h  TfliteCustomOpsLoader.m  TfliteFlutterPlugin.swift  tflite_custom_ops.c
lib/: flutter_litert.dart  flutter_litert_method_channel.dart  flutter_litert_platform_interface.dart
lib/src/: delegate.dart  interpreter.dart  interpreter_options.dart  isolate_interpreter.dart  model.dart  tensor.dart
lib/src/bindings/: bindings.dart
lib/src/custom_ops/: transpose_conv_bias.dart
lib/src/delegates/: coreml_delegate.dart  gpu_delegate.dart  metal_delegate.dart  xnnpack_delegate.dart
lib/src/ffi/: helper.dart
lib/src/util/: byte_conversion_utils.dart  list_shape_extension.dart
linux/: CMakeLists.txt
macos/: flutter_litert.podspec  libtflite_custom_ops.dylib
macos/Classes/: TfliteFlutterPlugin.swift
src/: CMakeLists.txt
src/custom_ops/: CMakeLists.txt  transpose_conv_bias.c  transpose_conv_bias.h
test/: flutter_litert_method_channel_test.dart  flutter_litert_test.dart
test/util/: byte_conversion_utils_test.dart
windows/: CMakeLists.txt
